@@ -15,6 +15,7 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+// hockeypuck is an OpenPGP keyserver.
 package main
 
 import (
