@@ -14,6 +14,11 @@ hockeypuck (1.0~b1) UNRELEASED; urgency=low
   * cmd/hockeypuck-load/main.go:
     - Add -drop and -take command line arguments to help
       create synchronization test cases.
+  * **/*.go, openpgp/doc.go:
+    - Add/fix package godoc comments. LP: #1117274
+    - Update debug utility commands wrt openpgp changes.
+  * === removed directory cmd/lspgp, === removed directory cmd/pqtest:
+    - Removed unused 'spike' debug utilities, no longer useful. 
 
  -- Casey Marshall <casey.marshall@gmail.com>  Sat, 03 Aug 2013 10:15:11 -0500
 
